<resources>
    <string name="app_name">TODO App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority_level">Priority Level</string>
    <string name="search">Search</string>
    <string name="high_priority">High Priority</string>
    <string name="sort_by">Sort by</string>
    <string name="low_priority">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="oldest_first">Oldest First</string>
    <string name="latest_first">Latest First</string>
    <string name="archive">Archive</string>
    <string name="sort_template">Sorted : %s</string>
    <string name="all_notes">All Notes</string>
    <string name="jotdown_logo">JotDown Logo</string>
    <string name="next_action">Next</string>
    <string name="welcome_desc">Your one place to create &amp;\nmanage short notes</string>
    <string name="welcome_title">Welcome To JotDown</string>
    <string name="priority_onboard_title">Priority Levels</string>
    <string name="priority_onboard_desc">Make it suit your priority.</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="sorting_options">Sorting Options</string>
    <string name="sorting_options_desc">Arrange them the way you like</string>
    <string name="high_priority_first">High to Low Priority</string>
    <string name="low_priority_first">Low to High Priority</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="account_backup"><![CDATA[Account & Backup]]></string>
    <string name="hey_there">Hey there!</string>
    <string name="no_login">Continue without Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="backup_options_title">Backup Options</string>
    <string name="sign_out">Sign Out</string>
</resources>