<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.screens.FirstOnboardScreen"
    android:theme="@style/OnBoardingTheme">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/jotdown_logo"
        android:textSize="38sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_desc"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        style="@style/FabTheme"
        android:id="@+id/next_fab"
        android:text="@string/next_action"
        app:icon="@drawable/ic_navigate_next_24"
        app:iconGravity="textEnd"
        android:paddingStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/jotdown_logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_jotdown_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>